# salesforce_users_to_forma

./: .env.example  .gitignore  README.md  TODO.md  docs-specificacion.md  pyproject.toml  requirements.txt
data/: active_hub.json  hub_roles_TST.json
data_test/: _phase2_projects.json  _phase3.env  _phase5_test.csv
data_test/_phase5_payloads_out/: import-p1.json
scripts/: inspect_db.py  print_schema.py  verify_phase4_oauth.py  verify_phase6_import.py  verify_phase7_diff.py
src/provisioner/: __init__.py  __main__.py  acc_import.py  cli.py  config.py  csv_validate.py  db.py  folder_provisioner.py  import_plan.py  import_report.py  logging_utils.py  normalize.py  oauth_aps.py  payload_build.py  project_users.py  projects_cache.py  roles_companies_cache.py
tests/: README.md  __init__.py  test_csv_validate.py  test_import_plan.py  test_payload_build.py
users_to_import/: sample_dummy_import.csv  test_duplicates_last_row_wins.csv  test_invalid_rows.csv  test_valid_multi_project.csv  test_valid_single_project.csv
